Fix font alignments

--- a/less/joust.less
+++ b/less/joust.less
@@ -57,6 +57,7 @@
   background-color: beige;
   width: 100%;
   height: 100%;
+  font-size: 2vh;
 }
 
 .game, #application .buttons {
@@ -247,24 +248,25 @@
   .cost {
 	top: 8%;
 	left: 4%;
+  font-size: 1.4em;
   }
 
   .atk {
-	left: 6%;
-	top: 84%;
+	left: 5%;
+	top: 85%;
   }
 
   .health, .durability {
-	left: 78%;
-	top: 84%;
+	left: 77%;
+	top: 85%;
   }
 }
 
 .cost, .atk, .health, .durability {
   position: absolute;
   display: block;
-  width: 20px;
-  height: 20px;
+  width: 20%;
+  //height: 20px;
   text-align: center;
   color: white;
   text-shadow: 0px 0px 2px black;
@@ -304,6 +306,16 @@
 }
 
 .weapon {
+  .atk {
+    top: 75%;
+    left: 10%;
+    font-size: 1em;
+  }
+  .durability {
+    top: 75%;
+    left: 68%;
+    font-size: 1em;
+  }
   div.visuals {
     position: relative;
     img {
@@ -318,7 +330,7 @@
       left: 14%;
       clip-path: url(#hero-weapon-clip);
     }
-}
+  }
 }
 
 .heroPower {
@@ -344,11 +356,10 @@
   }
 
   .cost {
-	//float: none;
-  position: absolute;
-  top: 40%;
-  left: 36%;
-	//margin: -8px auto 0 auto;
+    position: absolute;
+    top: 41%;
+    left: 39%;
+    font-size: 1.1em;
   }
 
   &.exhausted {
@@ -499,20 +510,19 @@
 	height: 100%;
 
 	.stats {
-	  position: realtive;
-	  width: 90%;
-	  margin: auto auto 0 auto;
+	  //width: 90%;
+	  //margin: auto auto 0 auto;
 
 	  .atk {
-		left: 20%;
+		left: 19%;
 		top: 62%;
-		font-size: 1.2em;
+		font-size: 1em;
 	  }
 
 	  .health {
-		left: 61%;
+		left: 60%;
 		top: 62%;
-		font-size: 1.2em;
+		font-size: 1em;
 	  }
 	}
   }
@@ -520,23 +530,26 @@
 
 .hero {
   height: 100%;
+  position: relative;
 
   > div {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-}
+	 display: flex;
+	 flex-direction: column;
+	 height: 100%;
+  }
 
-	.atk, .health {
-	  margin-bottom: -4px;
-	}
+  .stats {
+	  .atk {
+		left: 4%;
+		top: 82%;
+		font-size: 1em;
+	  }
 
-	.atk {
-	  margin-left: -4px;
-	}
-
-	.health {
-	  margin-right: -4px;
+	  .health {
+		left: 74%;
+		top: 81%;
+		font-size: 1em;
+	  }
 	}
 
 	.secrets {
